--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -52,7 +52,7 @@
     <div class="cardd">
         <div>
             <div class="numbers">{{countRoom}}</div>
-            <div class="cardName">ROOM</div>
+            <div class="cardName">Phòng Thi đấu</div>
         </div>
 
         <div class="iconBx">
