--- a/src/resources/scss/_login.scss
+++ b/src/resources/scss/_login.scss
@@ -1,214 +1,55 @@
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-$openSans: 'Open Sans', Helvetica, Arial, sans-serif;
-
-svg {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    overflow: visible;
-}
-
-.svg-icon {
-    cursor: pointer;
-
-    path {
-        stroke: rgba(255, 255, 255, 0.9);
-        fill: none;
-        stroke-width: 1;
-    }
-}
-
-input,
-button {
-    outline: none;
-    border: none;
-}
-
-.cont {
-    position: relative;
-    height: 100%;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg');
+.background {
+    background: url(https://giaoxudongtri.com/wp-content/uploads/2018/08/1.-bitichThanhTay.jpg) no-repeat;
     background-size: cover;
-    overflow: auto;
-    font-family: $openSans;
-}
+    height: 100vh;
+    width: 100%;
 
-.demo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -15rem;
-    margin-top: -26.5rem;
-    width: 30rem;
-    height: 53rem;
-    overflow: hidden;
-}
-
-.login {
-    position: relative;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(63, 53, 99, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
-    transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
-    transform: scale(1);
-
-    &.inactive {
-        opacity: 0;
-        transform: scale(1.1);
+    .row-container {
+        border: 2px solid #fff;
+        border-radius: 10px;
+        padding: 30px;
+        background: $white-color;
     }
 
-    &__check {
-        position: absolute;
-        top: 16rem;
-        left: 13.5rem;
-        width: 14rem;
-        height: 2.8rem;
-        background: rgb(247, 245, 245);
-        transform-origin: 0 100%;
-        transform: rotate(-45deg);
-
-        &:before {
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: 100%;
-            width: 2.8rem;
-            height: 5.2rem;
-            background: rgb(255, 254, 254);
-            box-shadow: inset -0.2rem -2rem 2rem rgba(0, 0, 0, 0.2);
-        }
-    }
-
-    &__form {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 50%;
-        padding: 1.5rem 2.5rem;
-        text-align: center;
-    }
-
-    &__row {
-        height: 5rem;
-        padding-top: 1rem;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    &__icon {
-        margin-bottom: -0.4rem;
-        margin-right: 0.5rem;
-
-        &.name path {
-            stroke-dasharray: 73.50196075439453;
-            stroke-dashoffset: 73.50196075439453;
-            animation: animatePath 2s 0.5s forwards;
-        }
-
-        &.pass path {
-            stroke-dasharray: 92.10662841796875;
-            stroke-dashoffset: 92.10662841796875;
-            animation: animatePath 2s 0.5s forwards;
-        }
-    }
-
-    &__input {
-        display: inline-block;
-        width: 22rem;
-        height: 100%;
-        padding-left: 1.5rem;
-        font-size: 1.5rem;
-        background: transparent;
-        color: #FDFCFD;
-    }
-
-    &__submit {
+    .form-field {
         position: relative;
-        width: 100%;
-        height: 4rem;
-        margin: 5rem 0 2.2rem;
-        color: rgba(255, 255, 255, 0.8);
-        background: #FF3366;
-        font-size: 1.5rem;
-        border-radius: 3rem;
-        cursor: pointer;
-        overflow: hidden;
-        transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
+        margin-bottom: 18px;
 
-        &:after {
-            content: "";
+        .form-input {
+            outline: none;
+            border: 1px solid #eee;
+            border-radius: 8px;
+            width: 100%;
+            height: 50px;
+            padding: 0 20px;
+            transition: 0.3s ease;
+            font-weight: 500;
+
+            &:focus,
+            &:hover {
+                border-color: #6a5af9;
+            }
+
+            &:not(:placeholder-shown) + .form-label,
+            &:focus + .form-label {
+                top: 0;
+                left: 11px;
+                padding: 0 10px;
+                display: inline-block;
+                background: $white-color;
+                color: #6a5af9;
+            }
+        }
+
+        .form-label {
             position: absolute;
             top: 50%;
-            left: 50%;
-            margin-left: -1.5rem;
-            margin-top: -1.5rem;
-            width: 3rem;
-            height: 3rem;
-            border: 2px dotted #fff;
-            border-radius: 50%;
-            border-left: none;
-            border-bottom: none;
-            transition: opacity 0.1s 0.4s;
-            opacity: 0;
+            left: 21px;
+            transform: translateY(-50%);
+            user-select: none;
+            color: #999;
+            pointer-events: none;
+            transition: 0.3s ease;
         }
-
-        &.processing {
-            width: 4rem;
-            font-size: 0;
-
-            &:after {
-                opacity: 1;
-                animation: rotate 0.5s 0.4s infinite linear;
-            }
-        }
-
-        &.success {
-            transition: transform 0.3s 0.1s ease-out, opacity 0.1s 0.3s, background-color 0.1s 0.3s;
-            transform: scale(30);
-            opacity: 0.9;
-            //background-color: rgba(255,255,255,0.95);
-
-            &:after {
-                transition: opacity 0.1s 0s;
-                opacity: 0;
-                animation: none;
-            }
-        }
-    }
-
-    &__signup {
-        font-size: 1.2rem;
-        color: #ABA8AE;
-
-        a {
-            color: #fff;
-            cursor: pointer;
-        }
-    }
-
-}
-
-@keyframes animRipple {
-    to {
-        transform: scale(3.5);
-        opacity: 0;
-    }
-}
-
-@keyframes rotate {
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes animatePath {
-    to {
-        stroke-dashoffset: 0;
     }
 }
