--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -9,25 +8,35 @@
 
 </head>
 
-<body style="background-image: linear-gradient(rgb(135, 118, 236), rgb(45, 218, 241)), url();">
+<body
+ 
+    >
     <div class="main">
         <p class="sign" align="center">Đăng nhập</p>
         <form class="form1" action="/login" method="POST">
             <input class="un" type="email" name="email" align="center" placeholder="Nhập Email">
             <input class="pass" type="password" name="password" align="center" placeholder="Mật khẩu">
-            <button style="margin-left: 125px;" type="submit" align="center" class="submit">Đăng
-                Nhập</button>
-            {{!-- <a class="submit" align="center">Sign in</a> --}}
-            <p class="forgotnnn" align="center"><a href="">Quên mật khẩu?</a>
-                <span><a href="" style="color: red;"> Đăng ký</a></span>
-            </p>
-
-
+            <button style="margin-left: 125px;" type="submit" align="center" class="submit">Đăng Nhập</button>
+            <b>
+                <p class="forgotnnn" align="center">
+                    <a href="/password/reset">Quên mật khẩu?</a>
+                    <span>
+                        <a href="" style="color: red;">Đăng ký</a>
+                    </span>
+                </p>
+            </b>
+        </form>
     </div>
 
 </body>
 
 <style>
+    body{
+        background-image: url(https://giaoxudongtri.com/wp-content/uploads/2018/08/1.-bitichThanhTay.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
     .main {
         background-color: #fff;
         width: 400px;
@@ -35,6 +44,7 @@
         margin: 7em auto;
         border-radius: 1.5em;
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+        align-items: center;
     }
 
     .sign {
@@ -42,7 +52,7 @@
         color: #8c55aa;
         font-family: 'Ubuntu', sans-serif;
         font-weight: bold;
-        font-size: 23px;
+        font-size: 27px;
     }
 
     .un {
@@ -54,13 +64,12 @@
         background: rgba(136, 126, 126, 0.04);
         padding: 10px 20px;
         border: none;
-        border-radius: 20px;
+        border-radius: 10px;
         outline: none;
         box-sizing: border-box;
         border: 2px solid rgba(0, 0, 0, 0.02);
         margin-bottom: 50px;
         margin-left: 46px;
-        text-align: center;
         margin-bottom: 27px;
         font-family: 'Ubuntu', sans-serif;
     }
@@ -78,13 +87,13 @@
         background: rgba(136, 126, 126, 0.04);
         padding: 10px 20px;
         border: none;
-        border-radius: 20px;
+        border-radius: 10px;
         outline: none;
         box-sizing: border-box;
         border: 2px solid rgba(0, 0, 0, 0.02);
         margin-bottom: 50px;
         margin-left: 46px;
-        text-align: center;
+
         margin-bottom: 27px;
         font-family: 'Ubuntu', sans-serif;
     }
@@ -99,7 +108,7 @@
 
     .submit {
         cursor: pointer;
-        border-radius: 5em;
+        border-radius: 15px;
         color: #fff;
         background: linear-gradient(to right, #9c27b0, #e040fb);
         border: 0;
@@ -143,7 +152,7 @@
         border: none;
         background: #ea1548;
         padding: 12px 30px;
-        border-radius: 30px;
+        border-radius: 10px;
         color: white;
         font-weight: bold;
         font-size: 15px;
@@ -179,7 +188,6 @@
     var msgError = document.getElementById('errors');
     ///toast message
     let msgToastError = msgError.innerHTML;
-
     if (msgToastError != '') {
         Eggy({
             title: 'Oops... Có gì đó không đúng',
@@ -188,4 +196,16 @@
             duration: 5000,
         });
     }
+</script>
+<script>
+    var msgSuccess = document.getElementById('success');
+        let msgToastSuccess = msgSuccess.innerHTML;
+        if(msgToastSuccess != ''){
+            Eggy({
+                title: 'Thành công',
+                message:  msgToastSuccess,
+                type: 'success',
+                duration: 5000,
+            });
+        }  
 </script>
