--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -9,7 +9,7 @@
         <ul class="header-da">
             <li><a href="/">Trang chủ</a></li>
             <li><a href="/blog">Blog</a></li>
-            <li><a href="subjects">Học</a></li>
+            <li><a href="/subjects">Học</a></li>
             <li><a href="#">Kết quả học tập</a></li>
 
             <li><a href="/competition">Thi đấu</a></li>
