--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -10,7 +10,7 @@
             <li><a href="/">Trang chủ</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/subjects">Học</a></li>
-            <li><a href="#">Kết quả học tập</a></li>
+            {{!-- <li><a href="#">Kết quả học tập</a></li> --}}
 
             <li><a href="/competition">Thi đấu</a></li>
         </ul>
