--- a/src/resources/views/exercises/create.hbs
+++ b/src/resources/views/exercises/create.hbs
@@ -118,15 +118,15 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-sm-4">
+                        {{!-- <div class="col-sm-4">
                             <select class="selectpicker show-tick border-0" name='ceID' data-style="btn-outline-light" data-width="100%" required >
                                 <option value="" class="selected">--Chọn loại câu hỏi--</option> 
                                 {{#each categories}}
                                 <option value="{{this._id}}">{{this.type}}</option>
                                 {{/each}}
                             </select>
-                        </div>
-                        <div class="col-sm-8">
+                        </div> --}}
+                        <div class="col-sm-12">
                             <textarea type='text' placeholder='Nhập gợi ý cho câu hỏi tại đây...' id='recommend'
                                 class="form-control" name="recommend"></textarea>
                         </div>
