--- a/src/public/admin/css/app.css
+++ b/src/public/admin/css/app.css
@@ -1,257 +1,258 @@
 body {
-    font-family: "Montserrat", sans-serif;
-    font-weight: normal;
-    line-height: 1.5;
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  line-height: 1.5;
+
 }
 
 body::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 body::-webkit-scrollbar-thumb {
-    background: rgb(180, 188, 195);
-    border-radius: 20px;
-    border: 3px solid rgb(180, 188, 195);
+  background: rgb(180, 188, 195);
+  border-radius: 20px;
+  border: 3px solid rgb(180, 188, 195);
 }
 
 table tbody tr td {
-    line-height: 1.5 !important;
+  line-height: 1.5 !important;
 }
 
 .table td img {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
 }
 
 input::placeholder,
 textarea::placeholder {
-    color: #495057 !important;
+  color: #495057 !important;
 }
 
 .exercise__detail nav .nav-tabs a {
-    width: 38px;
-    height: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
+  width: 38px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .exercise__detail nav .nav-tabs a.active {
-    background-color: #fb5533 !important;
-    color: #fff !important;
+  background-color: #fb5533 !important;
+  color: #fff !important;
 }
 
 .ck-editor__editable {
-    min-height: 150px;
+  min-height: 150px;
 }
 
 a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .text-orange {
-    color: #fb5533 !important;
+  color: #fb5533 !important;
 }
 
 p {
-    line-height: 1.5 !important;
+  line-height: 1.5 !important;
 }
 
 .fw-primary {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .system__list table tbody tr .value {
-    line-height: 1.5;
-    display: -webkit-box;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    padding: 1.25rem 0.9375rem;
-    height: 75px;
+  line-height: 1.5;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  padding: 1.25rem 0.9375rem;
+  height: 75px;
 }
 
 .file-drop-area {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 450px;
-    max-width: 100%;
-    padding: 6px;
-    border: 1px dashed rgba(0, 0, 0, 0.4);
-    border-radius: 3px;
-    transition: 0.2s;
-    color: #444;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 450px;
+  max-width: 100%;
+  padding: 6px;
+  border: 1px dashed rgba(0, 0, 0, 0.4);
+  border-radius: 3px;
+  transition: 0.2s;
+  color: #444;
 }
 
 .file-drop-area.is-active {
-    background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .fake-btn {
-    flex-shrink: 0;
-    background-color: #eff2f5;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    padding: 8px 15px;
-    margin-right: 10px;
-    font-size: 12px;
-    text-transform: uppercase;
-    cursor: pointer;
+  flex-shrink: 0;
+  background-color: #eff2f5;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .file-msg {
-    font-size: small;
-    font-weight: 300;
-    line-height: 1.4;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: small;
+  font-weight: 300;
+  line-height: 1.4;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .file-input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-    opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
 }
 
 .file-input:focus {
-    outline: none;
+  outline: none;
 }
 
 #btn-submit-add-excel,
 #btn-cancel,
 .form-upload button[type="submit"],
 .form-upload button[type="button"] {
-    display: none;
+  display: none;
 }
 
 .statistical__detail ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .statistical__detail .nav-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 0;
 }
 
 .statistical__detail nav .nav-tabs a.active {
-    background-color: #fb5533 !important;
-    color: #fff !important;
+  background-color: #fb5533 !important;
+  color: #fff !important;
 }
 
 .statistical__detail .form-check-label {
-    display: flex;
-    align-items: center;
-    gap: 4px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 .statistical__detail .form-check-label p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .bg-green {
-    background-color: #35a801;
+  background-color: #35a801;
 }
 
 textarea {
-    line-height: 1.5 !important;
+  line-height: 1.5 !important;
 }
 
 .form-control {
-    border: 1px solid #d4d4d4;
+  border: 1px solid #d4d4d4;
 }
 
 .form-control:focus {
-    border-color: #132c46;
+  border-color: #132c46;
 }
 
 select.form-control {
-    padding: 0.75rem;
-    color: #495057;
+  padding: 0.75rem;
+  color: #495057;
 }
 
 .form-check-input-custom {
-    display: none;
+  display: none;
 }
 
-.form-check-input-custom + label {
-    color: #333;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
+.form-check-input-custom+label {
+  color: #333;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
 }
 
-.form-check-input-custom + label span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    margin: -1px 4px 0 0;
-    vertical-align: middle;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid #ffffff;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
-    background-repeat: no-repeat;
-    background-position: center;
-    text-align: center;
-    line-height: 44px;
+.form-check-input-custom+label span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  line-height: 44px;
 }
 
-.form-check-input-custom.color-1 + label span {
-    background-color: #2ecc71;
+.form-check-input-custom.color-1+label span {
+  background-color: #2ecc71;
 }
 
-.form-check-input-custom.color-2 + label span {
-    background-color: #3498db;
+.form-check-input-custom.color-2+label span {
+  background-color: #3498db;
 }
 
-.form-check-input-custom.color-3 + label span {
-    background-color: #f1c40f;
+.form-check-input-custom.color-3+label span {
+  background-color: #f1c40f;
 }
 
-.form-check-input-custom.color-4 + label span {
-    background-color: #e74c3c;
+.form-check-input-custom.color-4+label span {
+  background-color: #e74c3c;
 }
 
-.form-check-input-custom + label span img {
-    opacity: 0;
-    transition: all 0.3s ease;
+.form-check-input-custom+label span img {
+  opacity: 0;
+  transition: all 0.3s ease;
 }
 
-.form-check-input-custom:checked + label span img {
-    opacity: 1;
+.form-check-input-custom:checked+label span img {
+  opacity: 1;
 }
 
 .custom-desc {
-    position: absolute;
-    bottom: calc(100% + 8px);
-    left: 50%;
-    transform: translate(-50%, 0);
-    background-color: #222;
-    font-size: 14px;
-    border-radius: 8px;
-    color: #fff;
-    padding: 12px;
-    min-width: 232px;
-    max-width: 272px;
-    display: none;
+  position: absolute;
+  bottom: calc(100% + 8px);
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: #222;
+  font-size: 14px;
+  border-radius: 8px;
+  color: #fff;
+  padding: 12px;
+  min-width: 232px;
+  max-width: 272px;
+  display: none;
 }
 
-.form-check-input-custom + label:hover + .custom-desc {
-    display: block;
+.form-check-input-custom+label:hover+.custom-desc {
+  display: block;
 }
 
 
@@ -260,43 +261,45 @@ select.form-control {
 
 
 .main-datatable>thead>tr>th {
-    border-bottom-width: 0;
-    color: #443f3f;
-    font-weight: 600;
-    padding: 16px 15px;
-    vertical-align: middle;
-    padding-left: 18px;
-    text-align: center;
+  border-bottom-width: 0;
+  color: #443f3f;
+  font-weight: 600;
+  padding: 16px 15px;
+  vertical-align: middle;
+  padding-left: 18px;
+  text-align: center;
 }
 
-.edit{
-    margin-right: 20px;
-    border-right-width: 10px;
-    border-left-width: 10px;
-    border-radius: 10px;
-    color: #000000;
+.edit {
+  margin-right: 20px;
+  border-right-width: 10px;
+  border-left-width: 10px;
+  border-radius: 10px;
+  color: #000000;
 }
-.remove{
-    border-radius: 10px;
-    border-right-width: 10px;
-    border-left-width: 10px;
-    color: #fff;
+
+.remove {
+  border-radius: 10px;
+  border-right-width: 10px;
+  border-left-width: 10px;
+  color: #fff;
 }
 
 div.dataTables_wrapper div.dataTables_filter label {
-    font-weight: bold; 
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
-div.dataTables_wrapper div.dataTables_filter input{
-    border-radius: 50px;
-    margin-left: 8px;
-    height: 34px;
-    padding: 0px 25px 0px 10px;
+
+div.dataTables_wrapper div.dataTables_filter input {
+  border-radius: 50px;
+  margin-left: 8px;
+  height: 34px;
+  padding: 0px 25px 0px 10px;
 }
 
 .eggy .title,
 .eggy .message {
-  line-height: 1.5; 
+  line-height: 1.5;
 }
 
 
@@ -339,6 +342,7 @@ body {
   transition: 0.5s;
   overflow: hidden;
 }
+
 .navigation.active {
   width: 80px;
 }
@@ -376,6 +380,7 @@ body {
   text-decoration: none;
   color: var(--white);
 }
+
 .navigation ul li:hover a,
 .navigation ul li.hovered a {
   color: var(--blue);
@@ -419,6 +424,7 @@ body {
   box-shadow: 35px 35px 0 10px var(--white);
   pointer-events: none;
 }
+
 .navigation ul li:hover a::after,
 .navigation ul li.hovered a::after {
   content: "";
@@ -443,6 +449,7 @@ body {
   background: var(--white);
   transition: 0.5s;
 }
+
 .main.active {
   width: calc(100% - 80px);
   left: 80px;
@@ -467,6 +474,7 @@ body {
   font-size: 2.5rem;
   cursor: pointer;
 }
+
 .user {
   position: relative;
   width: 40px;
@@ -505,6 +513,7 @@ body {
   cursor: pointer;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 }
+
 .cardBox .carddd {
   position: relative;
   background: #54B435;
@@ -515,12 +524,14 @@ body {
   cursor: pointer;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 }
+
 .cardBox .carddd .numbers {
   position: relative;
   font-weight: 500;
   font-size: 2.5rem;
   color: #153462;
 }
+
 .cardBox .carddd:hover {
   background: #BCE29E;
 }
@@ -566,6 +577,7 @@ body {
 .cardBox .cardd:hover {
   background: var(--blue);
 }
+
 .cardBox .cardd:hover .numbers,
 .cardBox .cardd:hover .cardName,
 .cardBox .cardd:hover .iconBx {
@@ -598,10 +610,12 @@ body {
   justify-content: space-between;
   align-items: flex-start;
 }
+
 .cardHeader h2 {
   font-weight: 600;
   color: var(--blue);
 }
+
 .cardHeader .btn {
   position: relative;
   padding: 5px 10px;
@@ -617,32 +631,41 @@ body {
   margin-top: 0px;
   top: 0px;
 }
+
 .details table thead td {
   font-weight: 600;
 }
+
 .details .recentOrders table tr {
   color: var(--black1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .details .recentOrders table tr:last-child {
   border-bottom: none;
 }
+
 .details .recentOrders table tbody tr:hover {
   background: var(--blue);
   color: var(--white);
 }
+
 .details .recentOrders table tr td {
   padding: 25px;
 }
+
 .details .recentOrders table tr td:last-child {
   text-align: end;
 }
+
 .details .recentOrders table tr td:nth-child(2) {
   text-align: end;
 }
+
 .details .recentOrders table tr td:nth-child(3) {
   text-align: center;
-} 
+}
+
 .status.delivered {
   padding: 2px 4px;
   background: #8de02c;
@@ -651,6 +674,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.pending {
   padding: 2px 4px;
   background: #e9b10a;
@@ -659,6 +683,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.return {
   padding: 2px 4px;
   background: #f00;
@@ -667,6 +692,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.inProgress {
   padding: 2px 4px;
   background: #1795ce;
@@ -685,6 +711,7 @@ body {
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
 }
+
 .recentCustomers .imgBx {
   position: relative;
   width: 40px;
@@ -692,6 +719,7 @@ body {
   border-radius: 50px;
   overflow: hidden;
 }
+
 .recentCustomers .imgBx img {
   position: absolute;
   top: 0;
@@ -700,22 +728,27 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
 .recentCustomers table tr td {
   padding: 12px 10px;
 }
+
 .recentCustomers table tr td h4 {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.2rem;
 }
+
 .recentCustomers table tr td h4 span {
   font-size: 14px;
   color: var(--black2);
 }
+
 .recentCustomers table tr:hover {
   background: var(--blue);
   color: var(--white);
 }
+
 .recentCustomers table tr:hover td h4 span {
   color: var(--white);
 }
@@ -725,17 +758,21 @@ body {
   .navigation {
     left: -300px;
   }
+
   .navigation.active {
     width: 300px;
     left: 0;
   }
+
   .main {
     width: 100%;
     left: 0;
   }
+
   .main.active {
     left: 300px;
   }
+
   .cardBox {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -745,9 +782,11 @@ body {
   .details {
     grid-template-columns: 1fr;
   }
+
   .recentOrders {
     overflow-x: auto;
   }
+
   .status.inProgress {
     white-space: nowrap;
   }
@@ -757,24 +796,30 @@ body {
   .cardBox {
     grid-template-columns: repeat(1, 1fr);
   }
+
   .cardHeader h2 {
     font-size: 20px;
   }
+
   .user {
     min-width: 40px;
   }
+
   .navigation {
     width: 100%;
     left: -100%;
     z-index: 1000;
   }
+
   .navigation.active {
     width: 100%;
     left: 0;
   }
+
   .toggle {
     z-index: 10001;
   }
+
   .main.active .toggle {
     color: #fff;
     position: fixed;
