--- a/src/resources/views/grades/list.hbs
+++ b/src/resources/views/grades/list.hbs
@@ -107,7 +107,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-dark">
-                    <div class="d-flex align-items-center justify-content-between mb-4">
+                    {{!-- <div class="d-flex align-items-center justify-content-between mb-4">
                         <form class="form-upload mb-0" action="/units/upload" method="post" enctype="multipart/form-data">
                             <div class="d-flex align-items-center">
                                 <div class="file-drop-area">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="mb-4">
                         <i>--- hoặc ---</i>
-                    </div>
+                    </div> --}}
                     <p class="card-description">Nhập thông tin bên dưới để thêm mới 1 Lớp</p>
                     <form class="mt-4" action="/grade/list" method="post">
                         <div class="form-group row">
