--- a/src/resources/views/subjects/theory.hbs
+++ b/src/resources/views/subjects/theory.hbs
@@ -1,5 +1,5 @@
 <section class="subject__theory">
-    <div class="col-lg-12 grid-margin stretch-card">
+    <div class="col-lg-8 grid-margin stretch-card mx-auto">
         <div class="card">
             <div class="card-body">
                 <div class="card-title">Nội dung {{SubjectTheory.name}} - Của lớp {{grade.name}} </div>
