--- a/src/resources/views/theories/detail.hbs
+++ b/src/resources/views/theories/detail.hbs
@@ -1,9 +1,11 @@
 <section class="theory__detail">
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
+ 
             {{#ifCond theory.length '>' 0}}
             
                 <div class="card-body">
+
                     <div class="d-flex align-items-center justify-content-between">
                         <div>
                             <div class="card-title text-uppercase">{{subject.name}} - Lớp {{grade.name}} - {{unit.name}}</div>
@@ -57,9 +59,16 @@
                     </div>
                     <div class="text-dark mt-4">
                         <form action="/theories/{{this._id}}?_method=PUT" method="post">
+                            <div class="form-group row mt-4">
+                                <label class="col-sm-1 col-form-label text-dark" for="audioUrl">Link video</label>
+                                <div class="col-sm-11">
+                                    <input class="form-control" id="audioUrl" type="text" placeholder="Nhập liên kết file video tại đây (nếu có)" name="audioUrl" value="{{this.audioUrl}}">
+                                </div>
+                            </div>
                             <textarea class="form-control" id="content-theory" type="text" placeholder="Nhập nội dung lý thuyết ở đây" name="content" style="display: none;">
                                 {{{this.content}}}
                             </textarea>
+
                             <div class="text-center mt-4"><button class="btn btn-primary ml-2" type="submit">Lưu lại</button></div>
                         </form>
                     </div>
